--- a/test/a.css
+++ b/test/a.css
@@ -1,6 +1,5 @@
 body{
-    background-color: black;
-    color:white;
+    background-color:#EFEFEF;
     margin: 0;
 }
 .clearfix::after{
@@ -8,34 +7,33 @@ body{
     display: block;
     clear: both;
 }
-
-.topNavBar>nav>ul{
+.topNavBar-inner{
+    padding:0 16px 0 16px;
+}
+.topNavBar nav>ul{
     list-style: none;
     margin: 0;
     padding: 0; 
 }
-.topNavBar>nav>ul>li{
+.topNavBar nav>ul>li{
     float :left;
     margin-left: 17px;
     margin-right: 17px;
 }
-.topNavBar>nav>ul>li>a{
+.topNavBar nav>ul>li>a{
     font-size: 12px;
     text-decoration: none;
     color:#B7B7B7;
     font-weight: bold;
     display: block
 }
-.topNavBar>a{
-    text-decoration: none;
-}
-.topNavBar>nav>ul>li>a{
+.topNavBar nav>ul>li>a{
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
     padding-top: 5px;
     padding-bottom: 5px;
   }
-.topNavBar>nav>ul>li>a:hover{
+.topNavBar nav>ul>li>a:hover{
     border-bottom: 3px solid #e06567;
   }
 .rs{
@@ -52,14 +50,110 @@ body{
 a.logo{
     padding-top: 5px;
     padding-bottom: 8px;
+    text-decoration: none;
 }
 .topNavBar{
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 16px;
-    padding-right: 16px;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
 }
-.topNavBar>nav{
+.topNavBar nav{
     padding-top:5px;
     padding-bottom: 3px;
+}
+.banner{
+    height:515px;
+    background-size: cover;
+}
+.banner .mask{
+    height:515px;
+    background-color: rgb(0,0,0,0.7);
+}
+.Usercard{
+    border: 1px solid black;
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.Usercard .welcome{
+    background-color: #E6686A;
+    color:white;
+    display:inline-block;
+    padding:4px 16px;
+    line-height: 22px;
+    position: relative;
+    margin-bottom: 10px;
+}
+.Usercard .welcome .triangle{
+    display: block;
+    border: 10px solid transparent;
+    width:0px;
+    border-left-color:#E6686A;
+    border-top-width: 0px;
+    left: 4px;
+    top: 100%;
+    position: absolute;
+}
+.Usercard .pictures{
+    float: left;
+}
+.Usercard .text{
+    float: left;
+    margin-left:65px;
+    width: 470px;
+}
+.Usercard .picturesandtexts{
+    padding:50px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.Usercard .text h1{
+    margin-top: 16px;
+    margin-bottom: 10px;
+}
+hr{
+    height: 0;
+    border: none;
+    border-top: 1px solid #DEDEDE
+}
+.Usercard .text hr{
+    margin: 20px 0;
+}
+.Usercard dl dd,
+.Usercard dl dt{
+    float: left;
+    padding: 5px 0;
+}
+.Usercard dl dt{
+    width:30%;
+    font-weight: bold;
+}
+.Usercard dl dd{
+    width: 70%;
+    color: #9Da0a7
+}
+.Usercard footer.media{
+    background-color: #E6686A;
+    text-align: center;
+}
+.Usercard svg{
+    width: 30px;
+    height: 30px;
+    fill: white;
+    margin: 0 16px;
+    vertical-align: top;
+}
+.Usercard footer.media a{
+    display: inline-block;
+    border-radius: 50%;
+    padding: 16px 0;
+    margin: 0 5px;
+}
+.Usercard footer.media a:hover{
+    background-color: #CF505F
 }
