--- a/test/a.css
+++ b/test/a.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#EFEFEF;
+    background-color:#efefef;
     margin: 0;
 }
 .clearfix::after{
@@ -73,10 +73,12 @@ a.logo{
     background-color: rgb(0,0,0,0.7);
 }
 .Usercard{
-    border: 1px solid black;
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+    
 }
 .Usercard .welcome{
     background-color: #E6686A;
@@ -107,10 +109,14 @@ a.logo{
 }
 .Usercard .picturesandtexts{
     padding:50px;
+
 }
 *{
     margin: 0;
     padding: 0;
+}
+ol,li{
+    list-style: none;
 }
 .Usercard .text h1{
     margin-top: 16px;
@@ -120,6 +126,9 @@ hr{
     height: 0;
     border: none;
     border-top: 1px solid #DEDEDE
+}
+h1,h2,h3,h4,h5,h6{
+    font-weight: normal;
 }
 .Usercard .text hr{
     margin: 20px 0;
@@ -156,4 +165,139 @@ hr{
 }
 .Usercard footer.media a:hover{
     background-color: #CF505F
+}
+body> main .downloadresume{
+    font-size: 14px;
+    line-height: 16px;
+    padding: 21px 55px;
+    border: 1px solid #cdcfd1;
+    display: inline-block;
+    text-decoration: none;
+    background-color: #efefef;
+    border-radius: 2px;
+    color: #3d4451;
+    font-weight: bold;
+    margin: 32px 0;
+    transition: box-shadow 0.2s;
+}
+.downloadresumewrapper{
+    text-align: center;
+}
+body> main .downloadresume:hover{
+    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+}
+.selfintroduction{
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+section.skills{
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+}
+section.skills>h2{
+    text-align: center;
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+section.skills > ol{
+    background-color: white;
+    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+    padding: 42px 50px 10px;
+    margin-top: 30px;
+}
+section.skills > ol > li{
+    float: left;
+    width: 48%;
+    box-sizing: border-box;
+}
+section.skills > ol > li:nth-child(even){
+    float: right;
+}
+section.skills > ol > li .progressbar{
+    height: 5px;
+    background-color: #FAE1E1;
+    margin: 4px 0 40px;
+}
+section.skills > ol > li .progressbar .progress{
+    height: 100%;
+    background-color: #E6686A;
+    width: 30%;
+    border-radius: 2px; 
+}
+section.skills h3{
+    font-size: 14px;
+    line-height: 1.1;
+    padding-right: 40px;
+}
+section.portfolio h2{
+    text-align: center;
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+section.portfolio{
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    text-align: center;
+}
+section.portfolio > nav > ol {
+    display: inline-block;
+    vertical-align: top;
+}
+section.portfolio > nav > ol > li{
+    float: left;  
+    margin-left: 40px; 
+    cursor: pointer;
+}
+section.portfolio > nav {
+    text-align: center;
+    display:inline-block;
+    vertical-align: top;
+    margin-top: 32px;
+}
+section.portfolio > nav > ol > li:nth-child(1){
+    margin-left: 0;
+}
+section.portfolio > nav .bar{
+    height: 5px;
+    background-color: white;
+    border-radius: 2px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+section.portfolio > nav .bar-inner{
+    height: 100%;
+    background-color: #E6686A;
+    border-radius: 2px;
+    width: 20%;
+    transition: all 0.3s;
+}
+section.portfolio > nav .bar.state-1 .bar-inner{
+    margin-left: 0;
+    width: 50px;
+}
+section.portfolio > nav .bar.state-2 .bar-inner{
+    margin-left: 65px;
+    width: 50px;
+}
+section.portfolio > nav .bar.state-3 .bar-inner{
+    margin-left: 140px;
+    width: 56px;
+}
+section.portfolio .works{
+    position: relative;
+    padding-bottom: 50px;
+}
+section.portfolio .works > .big,
+section.portfolio .works > .small{
+    position: absolute;
 }
